Remove ASM8_EXPERIMENTAL checks from agent ASM lib