@@ -183,39 +183,6 @@ final class Constants implements Opcodes {
   private Constants() {}
 
   static void checkAsm8Experimental(final Object caller) {
-    Class<?> callerClass = caller.getClass();
-    String internalName = callerClass.getName().replace('.', '/');
-    if (!isWhitelisted(internalName)) {
-      checkIsPreview(callerClass.getClassLoader().getResourceAsStream(internalName + ".class"));
-    }
-  }
-
-  static boolean isWhitelisted(final String internalName) {
-    if (!internalName.startsWith("org/objectweb/asm/")) {
-      return false;
-    }
-    String member = "(Annotation|Class|Field|Method|Module|RecordComponent|Signature)";
-    return internalName.contains("Test$")
-        || Pattern.matches(
-            "org/objectweb/asm/util/Trace" + member + "Visitor(\\$.*)?", internalName)
-        || Pattern.matches(
-            "org/objectweb/asm/util/Check" + member + "Adapter(\\$.*)?", internalName);
-  }
-
-  static void checkIsPreview(final InputStream classInputStream) {
-    if (classInputStream == null) {
-      throw new IllegalStateException("Bytecode not available, can't check class version");
-    }
-    int minorVersion;
-    try (DataInputStream callerClassStream = new DataInputStream(classInputStream); ) {
-      callerClassStream.readInt();
-      minorVersion = callerClassStream.readUnsignedShort();
-    } catch (IOException ioe) {
-      throw new IllegalStateException("I/O error, can't check class version", ioe);
-    }
-    if (minorVersion != 0xFFFF) {
-      throw new IllegalStateException(
-          "ASM8_EXPERIMENTAL can only be used by classes compiled with --enable-preview");
-    }
+    // removed
   }
 }
